--- a/gpgadmin-front-end/app/views/main.html
+++ b/gpgadmin-front-end/app/views/main.html
@@ -1,7 +1,7 @@
 <div class="jumbotron">
   <h1>Don't have a key?</h1>
   <p>Learn how to generate one...
-  <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p>
+  <p><a class="btn btn-primary btn-lg" ng-href="#/help" role="button">Learn more</a></p>
 </div>
 
 <div class="panel panel-primary" ng-controller="KeyuploadCtrl">
